--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
 }
 * {
   box-sizing: border-box;
-  font-family: "JunctionLight";
+  font-family: Helvetica, Arial, sans-serif;
   color: #373d3f;
   font-size: 16px;
   letter-spacing: 0.7px;
@@ -14,6 +14,15 @@
 }
 body {
   background-color: rgb(252, 252, 252);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "JunctionLight";
 }
 
 .container {
